--- a/index.html
+++ b/index.html
@@ -8,85 +8,310 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="home">
 
-        <!-- ------------------ Navigation Bar codes ---------------- -->
+        <!-- ---------- Header Code ---------- -->
+        <header>
 
-        <div class="navbar grid padding">
-            <div class="nav-logo ">
-                <h1>Uday <span>Singh</span></h1>
-            </div>
+            <!-- ------------------ Navigation Bar codes ---------------- -->
 
-            <div class="nav-tabs">
-                <ul class="nav-ul center">
-                    <li class="nav-links">
-                        <a href="#home">home</a>
-                    </li>
-                    <li class="nav-links">
-                        <a href="#about">about</a>
-                    </li>
-                    <li class="nav-links">
-                        <a href="#serivces">services</a>
-                    </li>
-                    <li class="nav-links">
-                        <a href="#testimonicals">testimonicals</a>
-                    </li>
-                    <li class="nav-links">
-                        <a href="#contact us">contact us</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- ------------------ Landing Intro Codes --------------- -->
-        <div class="intro padding grid">
-            <div class="intro-left">
-                <div class="intro-text">
-                    <p>hi, it's <span>Uday</span></p>
+            <div class="navbar grid padding">
+                <div class="nav-logo ">
+                    <h1>Uday <span>Singh</span></h1>
                 </div>
 
-                <div class="intro-typewritter">
-                    <h1>Don't <span>q</span>uit your <span>d</span>aydream.</h1>
-                </div>
-
-                <p class="intro-lorem">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem. Quae et dolor facere quidem
-                    veniam. Odio id non quod architecto autem consequuntur porro !
-                </p>
-
-                <div class="social-buttons center">
-                    <a href="https://www.instagram.com/therisinguday/" target="_blank">
-                        <i class="social-icons fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="https://wa.me/+918340478491" target="_blank">
-                        <i class="social-icons fa-brands fa-whatsapp"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/uday--pratap--singh/" target="_blank">
-                        <i class="social-icons fa-brands fa-linkedin-in"></i>
-                    </a>
-                    <a href="https://github.com/RisingHacker" target="_blank">
-                        <i class="social-icons fa-brands fa-github"></i>
-                    </a>
-                </div>
-
-                <div class="intro-buttons center">
-                    <a href="assets/cv.pdf" download="cv.pdf">
-                        <button class="intro-cv btn">Download CV</button>
-                    </a>
-                    <button class="intro-contact btn">Contact</button>
+                <div class="nav-tabs">
+                    <ul class="nav-ul center">
+                        <li class="nav-links">
+                            <a href="#home" class="active">home</a>
+                        </li>
+                        <li class="nav-links">
+                            <a href="#about">about</a>
+                        </li>
+                        <li class="nav-links">
+                            <a href="#services">services</a>
+                        </li>
+                        <li class="nav-links">
+                            <a href="#testimonials">testimonicals</a>
+                        </li>
+                        <li class="nav-links">
+                            <a href="#contact">contact us</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
-            <div class="intro-right center">
-                <div class="intro-mypic center">
-                    <img src="assets/asdf.jpg" alt="mypic">
+        </header>
+
+        <!-- ---------- Main Content Code -------- -->
+        <main>
+            <a href="#home">
+                <span class="goto-top center">
+                    <i class="fa-solid fa-arrow-up goto-top-icon"></i>
+                </span>
+            </a>
+
+            <!-- ------------------ Landing Intro Codes --------------- -->
+            <div class="intro padding grid">
+                <div class="intro-left">
+                    <div class="intro-text">
+                        <p>hi, it's <span>Uday</span></p>
+                    </div>
+
+                    <div class="intro-typewritter center">
+                        <h1 class="text first-text">I'm a</h1>
+                        <span class="text second-text">
+                            Developer
+                            <span class="second-text-overlay"></span>
+                        </span>
+                    </div>
+
+                    <p class="intro-lorem">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, voluptatem. Quae et dolor facere
+                        quidem
+                        veniam. Odio id non quod architecto autem consequuntur porro !
+                    </p>
+
+                    <div class="social-buttons center">
+                        <a href="https://www.instagram.com/therisinguday/" target="_blank">
+                            <i class="social-icons fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="https://wa.me/+918340478491" target="_blank">
+                            <i class="social-icons fa-brands fa-whatsapp"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/uday--pratap--singh/" target="_blank">
+                            <i class="social-icons fa-brands fa-linkedin-in"></i>
+                        </a>
+                        <a href="https://github.com/RisingHacker" target="_blank">
+                            <i class="social-icons fa-brands fa-github"></i>
+                        </a>
+                    </div>
+
+                    <div class="intro-buttons center">
+                        <a href="assets/cv.pdf" download="cv.pdf">
+                            <button class="intro-cv btn">Download CV</button>
+                        </a>
+                        <button class="intro-contact btn">Contact</button>
+                    </div>
+                </div>
+
+                <div class="intro-right center">
+                    <div class="intro-mypic center">
+                        <img src="assets/asdf.jpg" alt="mypic">
+                    </div>
                 </div>
             </div>
-        </div>
+
+            <!-- ----------------------- About Section Code ------------------------ -->
+            <div class="about-wrapper" id="about">
+                <div class="about">
+                    <h2 class="heading">Education</h2>
+
+                    <div class="timeline-items">
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-date">2022</div>
+                            <div class="timeline-content">
+                                <h3>High School</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum optio alias neque,
+                                    id
+                                    laborum ratione tempora culpa odit sint eum.</p>
+                            </div>
+                        </div>
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-date">2023</div>
+                            <div class="timeline-content">
+                                <h3>Internship</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum optio alias neque,
+                                    id
+                                    laborum ratione tempora culpa odit sint eum.</p>
+                            </div>
+                        </div>
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-date">2024</div>
+                            <div class="timeline-content">
+                                <h3>Job</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum optio alias neque,
+                                    id
+                                    laborum ratione tempora culpa odit sint eum.</p>
+                            </div>
+                        </div>
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-date">2025</div>
+                            <div class="timeline-content">
+                                <h3>University</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum optio alias neque,
+                                    id
+                                    laborum ratione tempora culpa odit sint eum.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ----------------------- Services Section Code ------------------------ -->
+
+            <div class="services padding center" id="services">
+                <h2 class="heading">Services</h2>
+
+                <div class="services-container grid">
+
+                    <div class="service-box">
+                        <div class="service-info">
+                            <h4>UI Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum magni sunt voluptates
+                                pariatur cumque. Alias dolor beatae molestias iure cum.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="service-box">
+                        <div class="service-info">
+                            <h4>Frontend Development</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum magni sunt voluptates
+                                pariatur cumque. Alias dolor beatae molestias iure cum.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="service-box">
+                        <div class="service-info">
+                            <h4>Backend Development</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum magni sunt voluptates
+                                pariatur cumque. Alias dolor beatae molestias iure cum.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="service-box">
+                        <div class="service-info">
+                            <h4>Blockchain Development</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum magni sunt voluptates
+                                pariatur cumque. Alias dolor beatae molestias iure cum.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- ----------------------- testimonicals Section Code ------------------------ -->
+
+            <div class="testimonials" id="testimonials">
+                <div class="testimonials-box">
+                    <h2 class="heading">Testimonials</h2>
+
+                    <div class="wrapper">
+                        <div class="testimonial-item center">
+                            <img src="assets/profilepicsantosh.jpg" alt="">
+                            <h2>Mark</h2>
+                            <div class="rating">
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                            </div>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius reiciendis consequatur
+                                officia
+                                recusandae porro at?</p>
+                        </div>
+
+                        <div class="testimonial-item center">
+                            <img src="assets/profilepicsantosh.jpg">
+                            <h2>Steve</h2>
+                            <div class="rating">
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                            </div>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius reiciendis consequatur
+                                officia
+                                recusandae porro at?</p>
+                        </div>
+
+                        <div class="testimonial-item center">
+                            <img src="assets/profilepicsantosh.jpg" alt="">
+                            <h2>Devid</h2>
+                            <div class="rating">
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                                <i class="fa-solid fa-star star"></i>
+                            </div>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius reiciendis consequatur
+                                officia
+                                recusandae porro at?</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- ----------------------- Contact us Section Code ------------------------ -->
+
+            <div class="contact" id="contact">
+                <h2 class="heading">Contact <span>Me</span></h2>
+                <form action="" class="center">
+                    <div class="input-group">
+                        <div class="input-box">
+                            <input type="text" placeholder="Full Name" fdprocessedid="djqq7q">
+                            <input type="email" placeholder="Email" fdprocessedid="v2muga">
+                        </div>
+
+                        <div class="input-box">
+                            <input type="number" placeholder="Phone Number" fdprocessedid="g2vhd">
+                            <input type="text" placeholder="Subject" fdprocessedid="ix2si">
+                        </div>
+                    </div>
+
+                    <div class="input-group-2">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                        <input type="submit" value="Send Message" class="btn" fdprocessedid="cyf8xzl">
+                    </div>
+                </form>
+            </div>
+
+        </main>
+
+        <!-- --------------- Footer Code -------------- -->
+
+        <footer class="footer">
+
+            <div class="social-buttons center">
+                <a href="https://www.instagram.com/therisinguday/" target="_blank">
+                    <i class="social-icons fa-brands fa-instagram"></i>
+                </a>
+                <a href="https://wa.me/+918340478491" target="_blank">
+                    <i class="social-icons fa-brands fa-whatsapp"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/uday--pratap--singh/" target="_blank">
+                    <i class="social-icons fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="https://github.com/RisingHacker" target="_blank">
+                    <i class="social-icons fa-brands fa-github"></i>
+                </a>
+            </div>
+            <p class="copyright">
+                © Uday Pratap Singh - All Rights Reserved 2024
+            </p>
+        </footer>
+
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
