--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UDAY PRATAP SINGH</title>
+    <title>Santosh Prajapati</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utilities.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -21,7 +21,7 @@
 
             <div class="navbar grid padding">
                 <div class="nav-logo ">
-                    <h1>Uday <span>Singh</span></h1>
+                    <h1>Santosh <span>Prajapati</span></h1>
                 </div>
 
                 <div class="nav-tabs">
@@ -59,7 +59,7 @@
             <div class="intro padding grid">
                 <div class="intro-left">
                     <div class="intro-text">
-                        <p>hi, it's <span>Uday</span></p>
+                        <p>hi, it's <span>Santosh</span></p>
                     </div>
 
                     <div class="intro-typewritter center">
